# sv2-mcp-server

./: .gitignore  CLAUDE.md  CLAUDE_CODE_INTEGRATION.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MCP_INTEGRATION.md  README.md  cursor-mcp-config.json  example-config.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: rust.yml
.goose/: analyze-protocol.recipe  create-tlv-field.recipe  decode-message.recipe  demonstrate-advanced-features.recipe  demonstrate-buffer-management.recipe  demonstrate-noise-protocol.recipe  demonstrate-roles-logic.recipe  encode-message.recipe  generate-test-message.recipe  get-extension-info.recipe  list-extensions.recipe  list-message-types.recipe  parse-tlv-fields.recipe  validate-tlv-field.recipe
src/: lib.rs  main.rs  types.rs
